[gd_scene load_steps=5 format=2]

[ext_resource path="res://swords/sword.gd" type="Script" id=1]
[ext_resource path="res://swords/swords.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.14323
height = 11.8362

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -0.25 ), Vector2( 25, -0.25 ), Vector2( 0, -0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -0.25 ), Vector2( 25, -0.25 ), Vector2( 0, -0.25 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[node name="Sword" type="Area2D"]
script = ExtResource( 1 )
damage = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.25 )
rotation = 1.5708
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.25 )
rotation = 0.785398
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Sword_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
